--- a/.vscodeignore
+++ b/.vscodeignore
@@ -2,7 +2,7 @@
 .vscode-test/**
 out/test/**
 src/**
-.gitignore
+.git*
 .yarnrc
 vsc-extension-quickstart.md
 **/tsconfig.json
@@ -13,3 +13,4 @@ vsc-extension-quickstart.md
 **/NOTES
 .arc*
 .pinterest-linters/
+TODO
