--- a/package.json
+++ b/package.json
@@ -38,20 +38,20 @@
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
-    "pretest": "npm run compile && npm run lint",
+    "pretest": "npm run compile && npm run lint && cp src/test/*.test out/test/",
     "lint": "eslint src --ext ts",
-    "test": "node ./out/test/runTest.js"
+    "test": "jest out/test/"
   },
   "devDependencies": {
     "@types/glob": "^7.1.3",
-    "@types/mocha": "^8.0.4",
+    "@types/jest": "^26.0.23",
     "@types/node": "^12.11.7",
     "@types/vscode": "^1.55.0",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "eslint": "^7.19.0",
     "glob": "^7.1.6",
-    "mocha": "^8.2.1",
+    "jest": "^27.0.1",
     "typescript": "^4.1.3",
     "vsce": "^1.87.1",
     "vscode-test": "^1.5.0"
