--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Quick New File",
   "description": "Create a new file that's similar to this file: same package and language.",
   "publisher": "avive",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "engines": {
     "vscode": "^1.55.0"
   },
@@ -35,7 +35,7 @@
     "url": "https://github.com/avivey/vscode-quick-new-file.git"
   },
   "scripts": {
-    "vscode:prepublish": "npm run compile",
+    "vscode:prepublish": "npm run test",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile && npm run lint && cp src/test/*.test out/test/",
