--- a/package.json
+++ b/package.json
@@ -3,15 +3,14 @@
   "displayName": "Quick New File",
   "description": "Create a new file that's similar to this file: same package and language.",
   "publisher": "avive",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "engines": {
-    "vscode": "^1.55.0"
+    "vscode": "^1.100.0"
   },
   "categories": [
     "Other"
   ],
   "activationEvents": [
-    "*"
   ],
   "main": "./out/extension.js",
   "icon": "icon.png",
@@ -44,17 +43,18 @@
     "test": "jest out/test/"
   },
   "devDependencies": {
-    "@types/glob": "^7.1.3",
-    "@types/jest": "^26.0.23",
-    "@types/node": "^12.11.7",
-    "@types/vscode": "^1.55.0",
-    "@typescript-eslint/eslint-plugin": "^4.14.1",
-    "@typescript-eslint/parser": "^4.14.1",
-    "eslint": "^7.19.0",
-    "glob": "^7.1.6",
-    "jest": "^27.0.1",
-    "typescript": "^4.1.3",
-    "vsce": "^1.87.1",
-    "vscode-test": "^1.5.0"
+    "@stylistic/eslint-plugin": "^5.2.2",
+    "@types/glob": "^8.1.0",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.1.0",
+    "@types/vscode": "^1.100.0",
+    "@typescript-eslint/eslint-plugin": "^8.38.0",
+    "@typescript-eslint/parser": "^8.38.0",
+    "@vscode/test-electron": "^2.5.2",
+    "@vscode/vsce": "^3.6.0",
+    "eslint": "^9.32.0",
+    "glob": "11.0",
+    "jest": "^29.7.0",
+    "typescript": "^5.8.3"
   }
 }
